--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ li > a:hover
     display: grid;
     width: 100%;
     grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: 100px 500px 80px 100px 560px 80px 100px 150px;
+    grid-template-rows: 100px 350px 80px 100px 560px 80px 100px 150px;
     grid-template-areas: "titre titre vide1"
                          "texte texte image"
                          "vide bouton1 vide2"
@@ -122,6 +122,24 @@ li > a:hover
     margin-bottom: 40px;
 }
 
+.content3
+{
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+    margin: 0 auto;
+}
+
+.content3 > div
+{
+    display: flex;
+}
+
+.content3 > *
+{
+    margin-bottom: 40px;
+}
+
 .cartes
 {
     display: grid;
@@ -133,12 +151,13 @@ li > a:hover
 {
     display: grid;
     align-self: center;
-    grid-template-columns: repeat(auto-fit, minmax(150px,1fr));
+    grid-template-columns: repeat(auto-fit, minmax(300px,1fr));
     grid-template-rows: 200px 40px 40px 120px 50px;
     border-radius: 10px;
     grid-row-gap: 15px;
     box-shadow: 5px 5px 5px #676767;
     background-color: rgba(239,243,245,60%);
+    transition: all 500ms;
 }
 
 .carte2:hover
@@ -149,7 +168,6 @@ li > a:hover
 .bouton-achat3
 {
     grid-row: 5 / 6;
-    grid-column: 1 / 2;
     background-color: #659ABD;
     text-decoration: none;
     color: #EFF3F5;
@@ -157,24 +175,7 @@ li > a:hover
     font-size: 14px;
     padding: 15px;
     text-transform: uppercase;
-    border-right: #EFF3F5 2px solid;
-    border-radius: 0 0 0 10px;
-    transition: all 700ms;
-}
-
-.bouton-achat4
-{
-    grid-row: 5 / 6;
-    grid-column: 2 / 3;
-    background-color: #659ABD;
-    text-decoration: none;
-    color: #EFF3F5;
-    text-align: center;
-    font-size: 14px;
-    padding: 15px;
-    text-transform: uppercase;
-    border-left: #EFF3F5 2px solid;
-    border-radius: 0 0 10px 0;
+    border-radius: 0 0 10px 10px;
     transition: all 700ms;
 }
 
@@ -190,10 +191,17 @@ li > a:hover
     margin-left: 30px;
 }
 
+.ul
+{
+    margin-bottom: 30px;
+}
+
 .ul > li
 {
+    list-style-type: none;
     margin-left: 70px;
     font-size: 22px;
+    color: #284E7B;
 }
 
 .ul li span
@@ -217,11 +225,13 @@ li > a:hover
     border-radius: 20px;
     border: #ADD4F3 2px dashed;
     box-shadow: 10px 10px 10px #284E7B;
+    transition: all 500ms;
 }
 
 .ul2 > li
 {
     margin-bottom: 10px;
+    font-size: 20px;
 }
 
 .ul2:hover
@@ -261,6 +271,57 @@ form > input, select
     box-shadow: 5px 5px 5px #284E7B;
 }
 
+.fiches
+{
+    display: grid;
+    width: 100%;
+    margin: 0 auto 10px;
+    grid-template-columns: 45% 15%;
+    grid-column-gap: 10px;
+    justify-content: center;
+}
+
+.fiches > select
+{
+    font-size: 16px;
+}
+
+.fiches > button
+{
+    background: #284E7B;
+    color: #ADD4F3;
+    font-size: 20px;
+    font-weight: bold;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: all 700ms;
+    font-family: 'Nunito',cursive;
+    box-shadow: 0 3px 2px 3px #659ABD;
+}
+
+.fiches > button:hover
+{
+    background: #ADD4F3;
+    color: #284E7B;
+    transform: scale(1.07);
+}
+
+.image3
+{
+    width: 75%;
+    margin: 0 auto;
+    border-radius: 20px;
+    border: #ADD4F3 5px solid;
+    box-shadow: 0 6px 5px 2px #284E7B;
+    transition: all 500ms;
+}
+
+.image3:hover
+{
+    transform: scale(1.03);
+}
+
 .message
 {
     grid-column: 1 / 3;
@@ -291,7 +352,6 @@ form > input[type=submit]
     border: none;
     border-radius: 5px;
     cursor: pointer;
-    margin-top: 20px;
     transition: all 700ms;
     font-family: 'Nunito',cursive;
     box-shadow: 0 3px 2px 3px #659ABD;
@@ -343,11 +403,12 @@ form > input[type=submit]:hover
 
 .image2
 {
-    width: 60%;
+    width: 100%;
     margin: 0 auto 30px;
     border-radius: 20px;
     border: #ADD4F3 5px solid;
     box-shadow: 0 6px 5px 2px #284E7B;
+    transition: all 500ms;
 }
 
 .image2:hover
@@ -394,6 +455,7 @@ form > input[type=submit]:hover
     border-radius: 20px;
     border: #ADD4F3 2px dashed;
     box-shadow: 10px 10px 10px #284E7B;
+    transition: all 500ms;
 }
 
 .paragraphe1:hover
@@ -404,6 +466,7 @@ form > input[type=submit]:hover
 .paragraphe
 {
     width: 80%;
+    font-size: 22px;
     justify-self: center;
     align-self: center;
     text-align: justify;
@@ -412,6 +475,7 @@ form > input[type=submit]:hover
     border-radius: 20px;
     border: #ADD4F3 2px dashed;
     box-shadow: 10px 10px 10px #284E7B;
+    transition: all 500ms;
 }
 
 .paragraphe:hover
@@ -422,12 +486,13 @@ form > input[type=submit]:hover
 .img1
 {
     grid-area: image;
-    width: 80%;
+    width: 70%;
     justify-self: center;
     align-self: center;
     border-radius: 20px;
     border: #659ABD 5px solid;
     box-shadow: 0 6px 5px 3px #284E7B;
+    transition: all 500ms;
 }
 
 .img1:hover
@@ -509,12 +574,13 @@ form > input[type=submit]:hover
     display: grid;
     height: 510px;
     align-self: center;
-    grid-template-columns: 175px 175px;
+    grid-template-columns: 350px;
     grid-template-rows: 200px 40px 40px 120px 50px;
     border-radius: 10px;
     grid-row-gap: 15px;
     box-shadow: 5px 5px 5px #676767;
     background-color: rgba(239,243,245,60%);
+    transition: all 500ms;
 }
 
 .carte:hover
@@ -522,10 +588,40 @@ form > input[type=submit]:hover
     transform: scale(1.06);
 }
 
+.carte-detail
+{
+    display: grid;
+    height: 605px;
+    width: 90%;
+    margin: 0 auto;
+    grid-template-columns: repeat(3,1fr);
+    grid-template-rows: 200px 40px 40px 120px 80px 50px;
+    border-radius: 10px;
+    grid-row-gap: 15px;
+    box-shadow: 5px 5px 5px #676767;
+    background-color: rgba(239,243,245,60%);
+    transition: all 500ms;
+}
+
+.carte-detail:hover
+{
+    transform: scale(1.06);
+}
+
 .image
 {
     grid-row: 1 / 2;
-    grid-column: 1 / 3;
+    justify-self: center;
+    height: 200px;
+    border-radius: 10px 10px 0 0;
+    margin: 0;
+    padding: 10px;
+}
+
+.image4
+{
+    grid-row: 1 / 2;
+    grid-column: 1 / 4;
     justify-self: center;
     height: 200px;
     border-radius: 10px 10px 0 0;
@@ -536,23 +632,38 @@ form > input[type=submit]:hover
 .nom-article
 {
     grid-row: 2 / 3;
-    grid-column: 1 / 3;
     justify-self: center;
     align-self: center;
+}
+
+.nom-article2
+{
+    grid-row: 2 / 3;
+    grid-column: 1 / 4;
+    justify-self: center;
+    align-self: center;
+    font-size: 40px;
 }
 
 .prix-achat
 {
     grid-row: 3 / 4;
-    grid-column: 1 / 3;
     justify-self: center;
     align-self: center;
+}
+
+.prix-achat2
+{
+    grid-row: 3 / 4;
+    grid-column: 1 / 4;
+    justify-self: center;
+    align-self: center;
+    font-size: 36px;
 }
 
 .description-rapide
 {
     grid-row: 4 / 5;
-    grid-column: 1 / 3;
     justify-self: center;
     align-self: center;
     padding: 0 15px;
@@ -560,10 +671,48 @@ form > input[type=submit]:hover
     text-align: justify;
 }
 
+.description-rapide2
+{
+    grid-row: 4 / 5;
+    grid-column: 1 / 4;
+    justify-self: center;
+    align-self: center;
+    padding: 0 30px;
+    text-align: justify;
+    font-size: 28px;
+}
+
+.selection-produit
+{
+    grid-row: 5 / 6;
+    grid-column: 1 / 4;
+    display: flex;
+    height: 80px;
+    width: 90%;
+}
+
+.selection-produit label
+{
+    width: 15%;
+    text-align: center;
+    align-self: center;
+}
+
+.selection-produit select
+{
+    width: 20%;
+    align-self: center;
+}
+
+.selection-produit input[type=number]
+{
+    width: 20%;
+    align-self: center;
+}
+
 .bouton-achat
 {
     grid-row: 5 / 6;
-    grid-column: 1 / 2;
     background-color: #659ABD;
     text-decoration: none;
     color: #EFF3F5;
@@ -571,29 +720,32 @@ form > input[type=submit]:hover
     font-size: 14px;
     padding: 15px;
     text-transform: uppercase;
-    border-right: #EFF3F5 2px solid;
-    border-radius: 0 0 0 10px;
+    border-radius: 0 0 10px 10px;
     transition: all 700ms;
+}
+
+.bouton-achat:hover
+{
+    background-color: #ADD4F3;
+    color: #659ABD;
 }
 
 .bouton-achat2
 {
-    grid-row: 5 / 6;
-    grid-column: 2 / 3;
+    grid-row: 6 / 7;
+    grid-column: 1 / 4;
     background-color: #659ABD;
     text-decoration: none;
     color: #EFF3F5;
     text-align: center;
-    font-size: 14px;
-    padding: 15px;
+    font-size: 20px;
+    padding: 13px;
     text-transform: uppercase;
-    border-left: #EFF3F5 2px solid;
-    border-radius: 0 0 10px 0;
+    border-radius: 0 0 10px 10px;
     transition: all 700ms;
 }
 
-
-.bouton-achat:hover, .bouton-achat2:hover
+.bouton-achat2:hover
 {
     background-color: #ADD4F3;
     color: #659ABD;
@@ -674,6 +826,7 @@ form > input[type=submit]:hover
     justify-self: center;
     padding: 15px 30px 30px;
     box-shadow: 10px 10px 10px #284E7B;
+    transition: all 500ms;
 }
 
 .bulle1:hover, .bulle2:hover, .bulle3:hover
@@ -687,6 +840,18 @@ form > input[type=submit]:hover
     background-color: #284E7B;
     display: flex;
     justify-content: space-between;
+    align-items: center;
+}
+
+.infos *
+{
+    text-align: left;
+    font-size: 24px;
+}
+
+.infos i
+{
+    color: #427AA1;
 }
 
 .title
@@ -696,15 +861,14 @@ form > input[type=submit]:hover
 
 .contacts
 {
-    width: 200px;
+    width: 260px;
     display: flex;
-    margin-bottom: 10px;
     justify-content: space-between;
 }
 
 .contacts a
 {
-    font-size: 50px;
+    font-size: 70px;
     color: #659ABD;
     transition: all 500ms;
 }
@@ -715,8 +879,83 @@ form > input[type=submit]:hover
     color: #ADD4F3;
 }
 
+.liens a
+{
+    text-decoration: none;
+    color: #659ABD;
+    margin-right: 15px;
+    margin-left: 15px;
+    font-size: 30px;
+    transition: all 500ms;
+}
+
+.liens a:hover
+{
+    font-size: 38px;
+    color: #ADD4F3;
+}
+
 .horaires
 {
     font-size: 22px;
-    text-align: end;
+    text-align: center;
+}
+
+.horaires div
+{
+    margin-bottom: 10px;
+}
+
+.icone
+{
+    position: relative;
+    display: inline-block;
+}
+
+.icone i
+{
+    color: #427AA1;
+}
+
+.icone .block
+{
+    display: none;
+    position: absolute;
+    bottom: 120%;
+    left: -300%;
+    width: 500px;
+    height: 100px;
+    padding: 13px 20px;
+    align-self: center;
+    border: 1px solid #427AA1;
+    background-color: rgba(255,255,255,70%);
+    box-shadow: 0 0 5px rgba(0,0,0,20%);
+    font-weight: bold;
+    font-size: 18px;
+    border-radius: 10px;
+    text-align: center;
+}
+
+.icone:hover .block
+{
+    display: inline-block;
+}
+
+.ligne
+{
+    display: flex;
+    align-items: center;
+}
+
+.colonne
+{
+    display: flex;
+    flex-direction: column;
+    width: 50%;
+}
+
+.colonne h2
+{
+    font-size: 40px;
+    margin-bottom: 20px;
 }
