--- a/style.css
+++ b/style.css
@@ -576,7 +576,7 @@ form > input[type=submit]:hover
     height: 605px;
     width: 90%;
     margin: 0 auto;
-    grid-template-columns: repeat(3,1fr);
+    grid-template-columns: repeat(2,1fr);
     grid-template-rows: 200px 40px 40px 120px 80px 50px;
     border-radius: 10px;
     grid-row-gap: 15px;
@@ -597,7 +597,7 @@ form > input[type=submit]:hover
 .image4
 {
     grid-row: 1 / 2;
-    grid-column: 1 / 4;
+    grid-column: 1 / 3;
     justify-self: center;
     height: 200px;
     border-radius: 10px 10px 0 0;
@@ -616,7 +616,7 @@ form > input[type=submit]:hover
 .nom-article2
 {
     grid-row: 2 / 3;
-    grid-column: 1 / 4;
+    grid-column: 1 / 3;
     justify-self: center;
     align-self: center;
     font-size: 2rem;
@@ -633,7 +633,7 @@ form > input[type=submit]:hover
 .prix-achat2
 {
     grid-row: 3 / 4;
-    grid-column: 1 / 4;
+    grid-column: 1 / 3;
     justify-self: center;
     align-self: center;
     font-size: 1.6rem;
@@ -651,8 +651,7 @@ form > input[type=submit]:hover
 .description-rapide2
 {
     grid-row: 4 / 5;
-    grid-column: 1 / 4;
-    width: 90%;
+    grid-column: 1 / 3;
     font-size: 1.4rem;
     justify-self: center;
     align-self: center;
@@ -679,11 +678,10 @@ form > input[type=submit]:hover
     color: #659ABD;
 }
 
-.stock-commande
+.choix-couleur
 {
     grid-row: 5 / 6;
-    grid-column: 1 / 4;
-    width: 40%;
+    grid-column: 1 / 2;
     display: flex;
     align-self: center;
     justify-content: space-around;
@@ -702,31 +700,10 @@ form > input[type=submit]:hover
     align-self: center;
 }
 
-.bouton-commande
-{
-    background-color: #659ABD;
-    text-decoration: none;
-    color: #EFF3F5;
-    text-align: center;
-    border-radius: 10px;
-    padding: 10px;
-    transition: all 700ms;
-    align-self: center;
-    box-shadow: 5px 5px 5px #676767;
-}
-
-.bouton-commande:hover
-{
-    background-color: #ADD4F3;
-    color: #659ABD;
-    cursor: pointer;
-    transform: scale(1.17);
-}
-
 .bouton-retour
 {
     grid-row: 6 / 7;
-    grid-column: 1 / 4;
+    grid-column: 1 / 3;
     background-color: #659ABD;
     text-decoration: none;
     color: #EFF3F5;
