--- a/style.css
+++ b/style.css
@@ -368,10 +368,13 @@ form > input[type=submit]:hover
 
 .erreur-validation
 {
+    grid-row: 6 / 7;
+    grid-column: 1 / 3;
     color: #8F908D;
     font-weight: bold;
     padding-top: 5px;
     padding-bottom: 5px;
+    text-align: center;
 }
 
 .etoile
@@ -573,11 +576,11 @@ form > input[type=submit]:hover
 .carte-detail
 {
     display: grid;
-    height: 605px;
+    height: 650px;
     width: 90%;
     margin: 0 auto;
     grid-template-columns: repeat(2,1fr);
-    grid-template-rows: 200px 40px 40px 120px 80px 50px;
+    grid-template-rows: 200px 40px 40px 120px 80px 30px 50px;
     border-radius: 10px;
     grid-row-gap: 15px;
     box-shadow: 5px 5px 5px #676767;
@@ -688,6 +691,27 @@ form > input[type=submit]:hover
     justify-self: center;
 }
 
+.choix-produit button, .choix-pack button
+{
+    background: #284E7B;
+    color: #ADD4F3;
+    font-weight: bold;
+    border: none;
+    border-radius: 5px;
+    font-size: 1.5rem;
+    cursor: pointer;
+    transition: all 700ms;
+    font-family: 'Nunito',cursive;
+    box-shadow: 0 3px 2px 3px #659ABD;
+}
+
+.choix-produit button:hover, .choix-pack button:hover
+{
+    background: #ADD4F3;
+    color: #284E7B;
+    transform: scale(1.07);
+}
+
 .rouge
 {
     color: red;
@@ -702,7 +726,7 @@ form > input[type=submit]:hover
 
 .bouton-retour
 {
-    grid-row: 6 / 7;
+    grid-row: 7 / 8;
     grid-column: 1 / 3;
     background-color: #659ABD;
     text-decoration: none;
@@ -916,4 +940,229 @@ form > input[type=submit]:hover
 {
     font-size: 2.5rem;
     margin-bottom: 20px;
+}
+
+.title3
+{
+    font-size: 2rem;
+    text-align: center;
+    color: #000;
+    margin-bottom: 20px;
+    justify-self: center;
+}
+
+.Table {
+    margin: 0 auto;
+    border: 0 solid #1C6EA4;
+    background-color: #EEEEEE;
+    width: 90%;
+    text-align: center;
+    border-collapse: collapse;
+}
+
+.Table td, .Table th {
+    border: 0 solid #ADADAD;
+    padding: 12px 2px;
+}
+
+.Table tbody td {
+    font-size: 1rem;
+}
+
+.Table tbody .td2
+{
+    width: 10%;
+}
+
+.Table tbody .td3
+{
+    width: 20%;
+}
+
+.Table tbody td form input[type=number]
+{
+    width: 120%;
+    margin-right: 5px;
+}
+
+.Table tbody td form input[type=submit]
+{
+    transform: scale(1.10);
+    background-color: #397ED5;
+    color: white;
+    font-size: 1rem;
+    border: 0;
+    padding: 5px;
+    border-radius: 5px;
+    box-shadow: none;
+}
+
+.Table tbody td form input[type=submit]:hover
+{
+    background-color: #1C6EA4;
+    cursor: pointer;
+}
+
+.Table tbody td .Suppr input[type=submit]
+{
+    transform: scale(1.10);
+    background-color: crimson;
+    color: white;
+    border: 0;
+    padding: 5px;
+    border-radius: 5px;
+}
+
+.Table tbody td .Suppr input[type=submit]:hover
+{
+    background-color: darkred;
+    cursor: pointer;
+}
+
+.Table thead {
+    background: #284E7B;
+    border-bottom: 2px solid #444444;
+}
+
+.Table thead th {
+    font-size: 1rem;
+    font-weight: bold;
+    color: #FFFFFF;
+    text-align: center;
+    border-left: 2px solid #D0E4F5;
+}
+
+.Table thead th:first-child {
+    border-left: none;
+}
+
+.Table tfoot
+{
+    font-size: 1rem;
+    font-weight: bold;
+    background-color: #CCCDD2;
+}
+
+.Table tfoot td
+{
+    border-left: 2px solid white;
+}
+
+.Table tfoot .total
+{
+    border-left: 0;
+    font-size: 1.5rem;
+}
+
+.Table tfoot .prix-total
+{
+    font-size: 1.5rem;
+    color: #222FC4;
+}
+
+.Table tfoot td .Suppr input[type=submit]
+{
+    transform: scale(1.10);
+    background-color: crimson;
+    color: white;
+    width: 160%;
+    margin-left: 30px;
+    font-size: 1rem;
+    border: 0;
+    padding: 5px;
+    border-radius: 5px;
+    box-shadow: none;
+}
+
+.Table tfoot td .Suppr input[type=submit]:hover
+{
+    background-color: darkred;
+    cursor: pointer;
+}
+
+.Boutons
+{
+    width: 80%;
+    margin: 20px auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.Bouton
+{
+    display: block;
+    justify-self: center;
+    text-decoration: none;
+    background: #284E7B;
+    color: #ADD4F3;
+    font-size: 1.5rem;
+    font-weight: bold;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: all 700ms;
+    font-family: 'Nunito',cursive;
+    box-shadow: 0 3px 2px 3px #659ABD;
+    padding: 20px 10px;
+}
+
+.Bouton:hover
+{
+    cursor: pointer;
+    background: #ADD4F3;
+    color: #284E7B;
+    transform: scale(1.07);
+}
+
+.form-Bouton
+{
+    width: 40%;
+    margin: 0;
+    display: block;
+}
+
+.photo-produit
+{
+    width: 15%;
+}
+
+.nom-produit
+{
+    justify-self: center;
+}
+
+.bouton-panier
+{
+    font-size: 2rem;
+    margin-left: 500px;
+    color: #284E7B;
+    transition: all 700ms;
+}
+
+.bouton-panier:hover
+{
+    cursor: pointer;
+    transform: scale(1.2);
+    color: #ADD4F3;
+}
+
+.choix-pack
+{
+    grid-row: 5 / 6;
+    grid-column: 1 / 3;
+    display: flex;
+    align-self: center;
+    justify-content: space-around;
+    justify-self: center;
+}
+
+.choix-pack input[type=number]
+{
+    width: 20%;
+}
+
+.choix-pack button
+{
+    width: 15%;
 }
